# cururu

./: .cururu.toml  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE-2.0  LICENSE-MIT  Makefile  README.md  RELEASE.md  SECURITY.md  action.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  consumer-example.yml  pr-agent.yml  release.yml
prompts/: review.md
src/: agent.rs  config.rs  context.rs  diff.rs  github.rs  main.rs  output.rs  provider.rs  retry.rs  review.rs
