[package]
name = "pullfrog-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
description = "Stateless GitHub Actions PR review bot powered by Rust and LLMs"

[features]
default = ["openai-compatible"]
openai-compatible = []
rig = ["dep:rig-core"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
globset = "0.4"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "zstd"] }
rig-core = { version = "0.39", optional = true }
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"

[dev-dependencies]
insta = { version = "1.43", features = ["json"] }
temp-env = "0.3"
wiremock = "0.6"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
