[package]
name = "cururu"
version = "1.0.4"
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"
description = "Stateless GitHub Actions PR review bot powered by Rust and LLMs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
globset = "0.4"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "zstd"] }
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
thiserror = "2.0"
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "fs", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"

[dev-dependencies]
insta = { version = "1.43", features = ["json"] }
temp-env = "0.3"
wiremock = "0.6"

[profile.release]
strip = true
lto = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
